[package]
name = "yggdrasil-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-utils = "0.1.2"
ironwood-rs = { git="https://github.com/arrza/ironwood-rs.git", rev="6d8bc3b3f8c5a875deb445db7f79abb2358c1462" }
hex = "0.4.3"
ed25519-dalek = "1.0.1"
env_logger = "0.10.0"
log = "0.4.19"
tokio-tun = "0.7.0"
console-subscriber = "0.1.10"
clap = { version = "4.3.19", features = ["derive"] }
lazy_static = { version = "1.4.0", features = ["spin"] }
rand = "0.7.3"
serde_json = "1.0.104"
serde = { version = "1.0.178", features = ["derive"] }
nu-json = "0.83.0"
url = "2.4.0"
tokio-serde = { version = "0.8.0", features = ["bincode", "serde_json", "json"] }
ipnet = { version = "2.8.0", features = ["serde"] }
openssl = "0.10.57"
tokio-native-tls = "0.3.1"
nix = { version = "0.27.1", features = ["net"] }
regex = "1.9.5"
rtnetlink = { version = "0.13.1"}
netlink-packet-route = "0.17.1"

[profile.release]
debug=true
